--- a/flask/blog07/static/help.html
+++ b/flask/blog07/static/help.html
@@ -10,7 +10,8 @@
     <p>Welcome to the blog help page:</p>
     <ul>
         <li><a href="/home">Home</a></li>
-        <li><a href="/welcome">Welcome page with some flask samples</a></li>
+        <li><a href="/load">Load Test Data</a></li>
+        <li><a href="/clear">Clear Test Data</a></li>
     </ul>
 </body>
 </html>
